--- a/public/index.html
+++ b/public/index.html
@@ -10,6 +10,6 @@
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
-    <script src="//at.alicdn.com/t/font_2325235_c0edxrxcueu.js"></script>
+    <script src="//at.alicdn.com/t/font_2325235_c0edxrxcueu.js" async></script>
   </body>
 </html>
